# aegis-soc-for-agent-swarms

./: .dockerignore  .env.example  .gitignore  AEGIS_Hackathon_Strategy.md  AEGIS_Prompt_Pack.md  DEMO_CHECKLIST.md  DEPLOY.md  Dockerfile  GO_LIVE.md  QUICKSTART.md  README.md  pyproject.toml
aegis/: __init__.py  bus.py  cli.py  guard.py  settings.py
aegis/agents/: __init__.py  audit_provenance.py  comms_monitor.py  payload_analyzer.py  threat_classifier.py  verdict_arbiter.py
aegis/api/: __init__.py  server.py
aegis/attacks/: __init__.py  benign_baseline.py  echoleak_chain.py  memory_poison.py  spoof_orchestrator.py
aegis/core/: __init__.py  events.py  signals.py  standards.py  verdicts.py
aegis/llm/: __init__.py  provider.py
aegis/middleware/: __init__.py  interceptor.py
aegis/sensors/: __init__.py  defender.py  entra_agent_id.py  prompt_shields.py
aegis/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
aegis/victim/: __init__.py  agent_base.py  agents.py  memory.py  tools.py
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx  state.ts
dashboard/src/components/: Login.tsx
dashboard/src/components/arbiter/: VerdictArbiter.tsx
dashboard/src/components/command-center/: CommandCenter.tsx
dashboard/src/components/heatmap/: ThreatHeatmap.tsx
dashboard/src/components/layout/: CommandBar.tsx  NavRail.tsx
dashboard/src/components/provenance/: ProvenanceExplorer.tsx
dashboard/src/components/settings/: IntegrationsView.tsx
dashboard/src/components/standards/: StandardsMapping.tsx
dashboard/src/components/threats/: ThreatFeed.tsx
dashboard/src/components/ui/: Panel.tsx  (+2 more)
dashboard/src/hooks/: useAegisStream.ts  useApiData.ts
dashboard/src/lib/: cn.ts  format.ts  swarm.ts
eval/: corpus.py  runner.py
scripts/: deploy_containerapp.sh  setup_entra.ps1  shot.py  shot2.py  verify_live.py
tests/: conftest.py  test_scenarios.py
(+4 files in other folders)
