[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS - the SOC for agent swarms. Cross-agent correlation and arbitration layer above Microsoft's single-point AI security sensors."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AEGIS Team" }]
keywords = ["security", "agentic-ai", "microsoft", "agent-framework", "soc", "ai-security"]

dependencies = [
    "agent-framework>=1.0.0b1",
    "azure-identity>=1.17.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-ai-contentsafety>=1.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation>=0.48b0",
    "openai>=1.50.0",
    "msal>=1.31.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "sse-starlette>=2.1.0",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "respx>=0.21.0",
]
eval = [
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "tabulate>=0.9.0",
]

[project.scripts]
aegis = "aegis.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]
exclude = ["dashboard*", "eval*", "tests*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
